[package]
name = "nrf-hal"
version = "0.0.1"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
description = "Hardware abstraction layer for the stm32 chips"
keywords = ["no-std", "nrf", "nrf52", "embedded", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/David-OConnor/stm32-hal"
documentation = "https://docs.rs/stm32-hal2"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]
edition = "2018"

[dependencies]
cortex-m = "0.7.3"

# Peripheral Access Crates
nrf52810-pac = { version = "0.10.0", optional = true }
nrf52811-pac = { version = "0.10.0", optional = true }
nrf52832-pac = { version = "0.10.0", optional = true }
nrf52833-pac = { version = "0.10.0", optional = true }
nrf52840-pac = { version = "0.10.0", optional = true }
nrf5340-app-pac = { version = "0.10.0", optional = true }
nrf5340-net-pac = { version = "0.10.0", optional = true }

# Embedded traits. Featured-gated with `embedded-hal`.
embedded-hal = { version = "0.2.5", features = ["unproven"], optional = true }

# nb is a non-blocking abstraction, eg for reading or writing one word at a time.
# It's mainly for embedded-hal, and a few of our APIs that mimick it.
nb = "1.0.0"
# Chrono allows for basic time and date functionality, for use with the Rtc.
chrono = { version = "0.4.19", default-features = false }

# Meta-programming
cfg-if = "1.0.0"  # if/else blocks for feature-gating
paste = "1.0.4"  # Token pasting, to make macros easier

# todo: Remove these dependencies below A/R
fixed = "1.0.0"
rand_core = "0.6.3"
embedded-dma = "0.1.1"
embedded-storage = "0.1.0"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.3", default-features = false }

nrf-usbd = { version = "0.1.0", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ["52840", "52840-rt", "embedded-hal"]
targets = ["thumbv7em-none-eabihf"]
# For bright "supported by crate feature only" text on `embedded-hal`?
rustdoc-args = ["--cfg", "docsrs"]

# Compile with one of these "runtime" features if the program
# will be directly flashed to an MCU; ie not a library.
[features]
52810-rt = ["nrf52810-pac/rt"]
52811-rt = ["nrf52811-pac/rt"]
52832-rt = ["nrf52832-pac/rt"]
52833-rt = ["nrf52833-pac/rt"]
52840-rt = ["nrf52840-pac/rt"]
5340-rt = ["nrf5340-app-pac/rt", "nrf5340-net-pac/rt"]

usb = ["nrf-usbd"]

# Features defined here are those taken from the SVD-generated nrf PACs.
# The "52" etc designator at the end lets us group by family when feature-gating.

52810 = ["nrf52810-pac", "52"]
52811 = ["nrf52811-pac", "52"]
52832 = ["nrf52833-pac", "52"]
52833 = ["nrf52833-pac", "52"]
52840 = ["nrf52840-pac", "52"]
5340 = ["nrf5340-app-pac", "nrf5340-net-pac", "53"]


# These features are used to featured gate sections of code that apply
# to an entire family.
52 = []
53 = []
