[package]
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
name = "stove_therm_sensor_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m-rtic = "1.0.0"

# Chip: MDBT50Q-P512K module, based on nRF52833
nrf-hal = { git = "https://github.com/david-oconnor/nrf-hal", branch="main", features = ["52833", "52833-rt"]}
smbus-pec = "1.0.0"  # Software PEC.
num-traits = { version = "0.2.14", default-features = false, features=["libm"] }  # For float rounding and abs.
# Enhanced Shockburst; ie Nordic's proprietary RF protocol. Fast ramp-up enabled.
esb = { git = "https://github.com/thalesfragoso/esb", branch = "master", features = ["52833", "fast-ru"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-